--- a/public/broadcast.html
+++ b/public/broadcast.html
@@ -67,7 +67,7 @@
         const FPS = 10;
         const SCALE = 0.5;
         const QUALITY = 0.5;
-        const AUDIO_BUFFER = 4096;
+        const AUDIO_BUFFER = 16384//4096;// ขนาดบัฟเฟอร์เสียง (ยิ่งใหญ่ = คุณภาพดี แต่หน่วงและใช้เน็ตมาก)
 
         // รูปภาพที่จะโชว์ตอนเลือก Audio Only (เป็น Base64 สีดำง่ายๆ เขียนคำว่า Audio Only)
         // คุณสามารถเอารูปอื่นมาแปลงเป็น Base64 ใส่แทนได้
